--- a/doc/yabar.1
+++ b/doc/yabar.1
@@ -365,6 +365,7 @@ Internal blocks have 5 additional block\-specific options:
     internal\-option1 # block\-specific  
     internal\-option2 # block\-specific
     internal\-option3 # block\-specific
+    internal\-spacing # takes a true or false value, used to add space pads to prevent uncomfortable numerical values from moving (only useful for monospace fonts!)
 
 .fi
 .RE
@@ -476,6 +477,7 @@ exec: "YABAR\_CPU";
 interval: 2;
 internal\-prefix: " ";
 internal\-suffix: "%";
+internal-spacing: true;
 
 .fi
 .RE
@@ -492,6 +494,17 @@ interval: 1;
 
 .fi
 .RE
+.IP \(bu 2
+Battery: It checks out the files `/sys/class/power_supply/NAME/capacity` and `/sys/class/power_supply/NAME/status` and extracts the capacity value. Example:
+.PP
+.RS
+
+.nf
+exec: "YABAR_BATTERY";
+internal-option1: "BAT0"; #i.e. Replace NAME with your corresponding name
+internal-option2: "        ";
+internal-suffix: "%";
+internal-spacing: true;
 
 .SH LICENSE
 .PP
