Add variable width for block support.

--- a/doc/yabar.1
+++ b/doc/yabar.1
@@ -316,6 +316,17 @@ image-scale-height: 0.4; #float value
 .fi
 .RE
 
+
+.IP \(bu 2
+Variable width: Use this optional feature in order to fit the block width into the current text width and subsequently save empty space inside the bar. Example:
+.PP
+.RS
+
+.nf
+variable-size: true;
+.fi
+.RE
+
 .SS DYNAMIC COLORS FOR BLOCKS
 .PP
 You can change block colors(background, foreground, underline and overline) within runtime. Along with pango markup format, you can fully control how a block looks throughout yabar's session.
