Update changelog (delimiter)
Document change for delimiter from space to semicolon in CHANGELOG file

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 NEXT:
 * Soft fork of yabar
+* Delimiter for config entries changed from space to semicolon
 * Better window title handling
 * Variable with block support
 * Spacing feature for internal blocks
