--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-NEXT:
+0.5.0 (2017-01-13):
 * Soft fork of yabar
 * Delimiter for config entries changed from space to semicolon (breaking change)
 * Absolute path for blocks YABAR_THERMAL and YABAR_BRIGHTNESS (breaking change)
@@ -9,6 +9,8 @@ NEXT:
 * New internal blocks:
   - load average
   - battery charge
+  - disk usage
+  - volume level
 
 0.4.0 (2016-04-08):
 * Support for dynamic color change
